--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_install:
 
 #These two steps will effectively validate our terraform and output a list of any changes to be made to our infrastructure
 script:
-  - ./terraform init
-  - ./terraform plan
+  - terraform init
+  - terraform plan
