--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-#Install a Terraform executable locally
+#Install a Terraform executable
 before_install:
-  - wget https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_windows_amd64.zip
-  - unzip terraform_0.11.13_windows_amd64.zip
+  - curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_windows_amd64.zip
+  - unzip /tmp/terraform.zip -d /tmp
+  - mkdir ~/bin
+  - mv /tmp/terraform ~/bin
+  - export PATH="~/bin:$PATH"
 
 #These two steps will effectively validate our terraform and output a list of any changes to be made to our infrastructure
-script:
-  - terraform init
-  - terraform plan
+script: terraform init ./terraform
